--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/2.2.3/bootstrap-slider.min.js"></script>
     <link rel="stylesheet" type="text/css" href="dist/app.css" />
     <style>
       body {
