add className and buttonColor to form gen props

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,16 @@
       max-height: 800px;
       overflow-y: auto
     }
+
+    .test-form input {
+
+      background-color: orange;
+      margin: 5;
+    }
+    .test-form a {
+      background-color: orange;
+      margin: 5;
+    }
   </style>
 </head>
 
